Fix site title alignment

--- a/themes/archiebald/assets/css/main.css
+++ b/themes/archiebald/assets/css/main.css
@@ -155,6 +155,7 @@ header {
 }
 
 header .main {
+    width: 250px;
     font-size: 1.5rem;
     margin-right: 1em;
     margin-bottom: 0.5em;
